--- a/package.json
+++ b/package.json
@@ -6,22 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier ./src --write"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@google-cloud/local-auth": "^3.0.1",
+    "airtable": "^0.12.2",
+    "axios": "^1.6.7",
+    "googleapis": "^134.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "next": "14.1.2",
+    "nodemailer": "^6.9.13",
+    "prettier": "^3.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.2"
+    "typescript": "^5"
   }
 }
