--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^134.0.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.2",
+    "next-auth": "^5.0.0-beta.17",
     "nodemailer": "^6.9.13",
     "prettier": "^3.2.5",
     "react": "^18",
