--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemailer": "^6.9.13",
     "prettier": "^3.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^34.2.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
